recursion.cons.increasing.Increasing.scala.error
Erreur de compilation :
Increasing:2: error: ':' expected but ',' found.
def compare(a,b) = {
             ^Increasing:18: error: identifier expected but '}' found.
}
^